fixed horizontal scrolling

--- a/src/styles/utils/varibles.scss
+++ b/src/styles/utils/varibles.scss
@@ -9,3 +9,8 @@ $categories-color-withe: #ffff;
   margin: 0;
   font-family: Manrope, sans-serif;
 }
+
+* {
+  max-width: 100%;
+  box-sizing: border-box;
+}
